fixed main content border

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ article{
     width: 100%;
     max-width: 960px;
     margin: 0px auto;
-    border: 1px solid #CCC;
+    border: 1px solid #DDD;
     padding: 20px;
     margin-bottom: 30px;
     
