--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777;
+    transition: all .5s ease;
 }
 body{
     margin: 0;
@@ -114,6 +115,34 @@ footer small{
     font-size: .7rem;
 }
 
+.loading{
+    background: #4aaaa5;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform-origin: 0% 50%;
+    transition: transform .5s ease, opacity 1s ease;
+}
+.loading div{
+    color: #FFF;
+    font-size: 2rem;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    animation: 2s ease infinite spin;
+}
+@keyframes spin{
+    from{transform: rotateZ(0deg);}
+    to{transform: rotateZ(360deg);}
+}
+.hidden{
+    
+    transform: scaleX(0);
+    
+    
+}
+
 /* Contact page stuff */
 
 label{
@@ -181,6 +210,7 @@ figcaption{
 body.dark{
     background-image: url("../images/dynamic-dark.png");
 }
+
 body.dark header{
     background: #222;
 }
