--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,6 +386,7 @@ body.twenty-nineteen article img{
     width: 150px;
     height: 150px;
     margin-bottom: 50px;
+    background: rgba(255, 255, 255, 0.11);
 
 }
 
